--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,11 @@
     <span> to projekt nadzorowania wydawania podatków w gminach</span>
   </h1>
 </div>
-<div id="container">
+<div id="container" class="clearfix">
   <%= yield %>
 </div>
+<br/>
+<br/>
 
 </body>
 </html>
