--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,24 +2,26 @@ $cream: #faefc5;
 $blue: #328BD0;
 $baby-blue: #6BC4FF;
 $grey: #ACBDD6;
+body, input{
+  font-family: 'Lato', sans-serif;
+}
 body {
-  background: #fff;
+  background: #fff; 
+  font-size: 18px;
   width: 100%;
   color: #000;
   padding: 0px;
   margin: 0px;
-  font-family: 'Lato', sans-serif;
 }
 div#header {
   border-bottom: 1px solid #000;
   h1 {
    width: 960px; 
-   font-weight: 900;
-   font-size: 32px;
-   margin: 70px auto 20px auto;
-   margin-bottom: 0px;
+   margin: 70px auto 10px auto;
    span {
      font-size: 14px;
+     font-style: italic;
+     margin-left: 15px;
    }
   }
 }
@@ -35,13 +37,13 @@ div.cream {
   padding: 30px;
   padding-bottom: 80px;
   text-align: justify;
-  line-height: 24px;
+  line-height: 30px;
   width: 480px;
   h3 {
     margin-bottom: 20px;
     margin-top: 20px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 24px;
   }
 }
 span.blue {
@@ -56,16 +58,16 @@ div.action{
   margin-left: 20px;
   h2 {
    color: $blue;
-   font-size: 26px;
-   line-height: 30px;
+   font-size: 36px;
+   line-height: 40px;
    margin-bottom: 16px;
    font-weight: bold;
   }
   h4 {
    color: #000;
    font-weight: bold;
-   font-size: 18px;
-   line-height: 23px;
+   font-size: 24px;
+   line-height: 30px;
   }
   .actions {
     margin-top: 75px;
@@ -82,18 +84,89 @@ div.arrow-right {
   border-bottom: 30px solid transparent;
   border-left: 30px solid $cream;
 }
+div.arrow-top {
+  margin-top: 0px;
+  float: right;
+  margin-right: 20px;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  border-bottom: 30px solid $cream;
+}
 .button {
-  padding: 20px 30px;
   color: #000;
   text-decoration: none;
   @include border-radius(5px); 
+  color: #142c41;
 }
 .button.active {
+  padding: 20px 35px;
   background-color: $baby-blue;
   @include box-shadow($grey 2px 2px 2px, $grey -2px 2px 2px, $grey 2px -2px 2px, $grey -2px -2px 2px);
 }
 .button.inactive {
-  font-size: 12px;
+  background-color: #dddddd;
+  font-size: 14px;
   margin-left: 50px;
+  margin-top: 20px;
+  @include box-shadow(#c6cbd8 2px 2px 2px, #c6cbd8 -2px 2px 2px, #c6cbd8 2px -2px 2px, #c6cbd8 -2px -2px 2px);
+  padding: 10px 20px;
 }
 
+.clear {
+  clear: both;
+}
+#superform {
+  h4 {
+    margin-left: 8px;
+    margin-top: 10px;
+  }
+  h2 {
+    color: $blue;
+    font-size: 36px;
+    margin-top: 60px;
+    width: 690px;
+    margin-left: 8px;
+    line-height: 40px;
+  }
+  form {
+    margin-top: 30px;
+    background-color: $cream;
+    padding: 30px 42px;
+    h3 {
+      color: #010101;
+      font-weight: bold;
+      margin-bottom: 12px;
+    }
+    input[type="text"], input[type="email"] {
+      height: 40px;
+      padding: 5px;
+      margin-right: 15px;
+      width: 240px;
+      border: 1px solid #647d9a;
+      @include box-shadow(#dbdbdb 1px 2px 4px 2px inset, #dbdbdb -1px 2px 4px 2px inset);
+      @include border-radius(5px); 
+      font-size: 18px;
+    }
+    input[type="submit"] {
+      border: 0px; 
+      font-size: 18px;
+      font-weight: bold;
+      padding: 15px 30px;
+      margin-left: 35px;
+    }
+  }
+  #socialbox {
+    margin-top: 140px;
+    float: right;
+  }
+}
+
+#socialbox {
+  a {
+    text-decoration: none;
+    margin-left: 25px;
+  }
+}
+#superform {
+  display: none;
+}
