--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -145,7 +145,7 @@ div.arrow-top {
     h3 {
       color: #010101;
       font-weight: bold;
-      margin-bottom: 12px;
+      margin-bottom: 15px;
     }
     input[type="text"], input[type="email"] {
       height: 40px;
@@ -168,14 +168,12 @@ div.arrow-top {
   }
 }
 
-#socialbox {
-  a {
-    text-decoration: none;
-    margin-left: 25px;
-    float: right;
-  }
-}
 #lastpage {
+   width: 820px;
+   h2.promise {
+     margin-top: 62px;
+     width: 520px;
+   }
   .creamish{
     background-color: $cream;
     padding: 25px;
@@ -191,12 +189,43 @@ div.arrow-top {
     line-height: 28px;
     margin-top: 20px;
     font-weight: bold;
-    width: 560px;
-    float: left;
+  }
+  h5 {
+    font-size: 18px;
+    line-height: 28px;
+    margin-top: 20px;
+    font-weight: bold;
   }
   #socialbox {
-    float: right;
-    margin-top: 30px;
+    margin-top: 40px;
+    a {
+      text-decoration: none;
+      float: left;
+      position: relative;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      img {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+      }
+      float: left;
+      border: 1px solid $blue;
+      padding-right: 20px;
+      height: 50px;
+      line-height: 50px;
+      padding-left: 50px;
+    }
+    a.fbox {
+      padding-left: 30px;
+      margin-right: 25px;
+    }
+
+    a.tbox {
+      padding-left: 60px;
+      margin-right: 35px;
+    }
   }
 }
 #superform, #lastpage {
@@ -255,4 +284,16 @@ div.pinky-arrow {
   div.widget {
     float: left;
    }
+}
+#superform {
+  .second {
+    #fs {
+      input {
+        margin-left: 60px;
+      }
+      input.active {
+        padding: 12px 60px;
+      }
+    }
+  }
 }
