--- a/app/views/layouts/_social.html.erb
+++ b/app/views/layouts/_social.html.erb
@@ -22,7 +22,7 @@
   </div>
   <div class="widget">
       <a href="https://twitter.com/share" class="twitter-share-button" data-url="<%=HOST %>"
-        data-text="Gmin Plus to projekt nadzorowania wydawania podatków w gminach">Tweet</a>
+        data-text="Gmin Puls to projekt nadzorowania wydawania podatków w gminach">Tweet</a>
   </div>
   <div class="widget">
       <div class="fb-like" data-href="<%= HOST %>" data-send="false" data-layout="button_count"
