--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -32,6 +32,8 @@ div#header {
      font-style: italic;
      margin-left: 15px;
      width: 210px;
+     line-height: 18px;
+     padding-top: 3px;
    }
   }
 }
@@ -134,11 +136,13 @@ div.arrow-top {
 #superform {
   display: none;
   margin-bottom: 140px;
+  position: relative;
   h4 {
     margin-left: 8px;
     margin-top: 10px;
   }
   form {
+    position: relative;
     margin-top: 30px;
     background-color: $cream;
     padding: 30px 42px;
@@ -304,4 +308,13 @@ div.pinky-arrow {
       }
     }
   }
+}
+.error{
+  position: absolute;
+  bottom: -75px;
+  background: url('/assets/error.png') no-repeat bottom left;
+  width: 204px;
+  height: 39px;
+  padding: 35px 25px 0px;
+  font-size: 18px;
 }
